load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sync",
    srcs = [
        "initializer.go",
        "lock_pile.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-execution/pkg/sync",
    visibility = ["//visibility:public"],
)

go_test(
    name = "sync_test",
    srcs = [
        "initializer_test.go",
        "lock_pile_test.go",
    ],
    embed = [":sync"],
    deps = [
        "//internal/mock",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//require",
    ],
)
