load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sync",
    srcs = ["lock_pile.go"],
    importpath = "github.com/buildbarn/bb-remote-execution/pkg/sync",
    visibility = ["//visibility:public"],
)

go_test(
    name = "sync_test",
    srcs = ["lock_pile_test.go"],
    deps = [
        ":sync",
        "@com_github_stretchr_testify//require",
    ],
)
