load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["browser_url.go"],
    importpath = "github.com/buildbarn/bb-remote-execution/pkg/util",
    visibility = ["//visibility:public"],
    deps = ["@com_github_buildbarn_bb_storage//pkg/digest:go_default_library"],
)
