load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "browser_url.go",
        "platforms.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-execution/pkg/util",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/digest:go_default_library",
    ],
)

go_test(
    name = "util_tests",
    srcs = ["platforms_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["platforms_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library"],
)
