load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "initialsizeclass",
    srcs = [
        "action_timeout_extractor.go",
        "analyzer.go",
        "blob_access_previous_execution_stats_pool.go",
        "fallback_analyzer.go",
        "feedback_driven_analyzer.go",
        "outcomes.go",
        "page_rank_strategy_calculator.go",
        "previous_execution_stats_pool.go",
        "strategy_calculator.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-execution/pkg/builder/initialsizeclass",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_storage//pkg/blobstore",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/buffer",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/proto/iscc",
        "@com_github_buildbarn_bb_storage//pkg/random",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_prometheus_client_golang//prometheus",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "initialsizeclass_test",
    srcs = [
        "action_timeout_extractor_test.go",
        "blob_access_previous_execution_stats_pool_test.go",
        "fallback_analyzer_test.go",
        "feedback_driven_analyzer_test.go",
        "outcomes_test.go",
        "page_rank_strategy_calculator_test.go",
    ],
    deps = [
        ":initialsizeclass",
        "//internal/mock",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/buffer",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/proto/iscc",
        "@com_github_buildbarn_bb_storage//pkg/testutil",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
